--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,3 @@
-﻿blinker==1.7.0
-click==8.1.7
-colorama==0.4.6
-Flask==3.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-Werkzeug==3.0.1
 blinker==1.7.0
 click==8.1.7
 colorama==0.4.6
@@ -13,16 +5,8 @@ Flask==3.0.0
 gunicorn==21.2.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
-MarkupSafe==2.1.3
-packaging==23.2
-Werkzeug==3.0.1
-blinker==1.7.0
-click==8.1.7
-colorama==0.4.6
-Flask==3.0.0
-gunicorn==21.2.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
+joblib==1.3.2
+jsonify==0.5
 MarkupSafe==2.1.3
 numpy==1.23.4
 packaging==23.2
